// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`t-set > slot setted value (with t-set) not accessible with t-out 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput, markRaw, createComponent } = helpers;
  const comp1 = createComponent(app, \`Childcomp\`, true, true, false, []);
  
  let block1 = createBlock(\`<div><p><block-child-0/></p><block-child-1/><p><block-child-2/></p></div>\`);
  
  function slot1(ctx, node, key = "") {
    ctx = Object.create(ctx);
    ctx["iter"] = 'inCall';
  return text('');
  }
  
  return function template(ctx, node, key = "") {
    ctx = Object.create(ctx);
    ctx["iter"] = 'source';
    const b2 = safeOutput(ctx['iter'], node, key, "\\u00021");
    const b3 = comp1({slots: markRaw({"default": {__render: slot1, __ctx: ctx, __owner: this}})}, key + \`\\u00022\`, node, this, null);
    const b4 = safeOutput(ctx['iter'], node, key, "\\u00023");
    return block1([], [b2, b3, b4]);
  }
}"
`;

exports[`t-set > slot setted value (with t-set) not accessible with t-out 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<div><block-child-0/><block-child-1/></div>\`);
  
  return function template(ctx, node, key = "") {
    ctx = Object.create(ctx);
    const b2 = safeOutput(ctx['iter'], node, key, "\\u00021");
    ctx["iter"] = 'called';
    const b3 = safeOutput(ctx['iter'], node, key, "\\u00022");
    return block1([], [b2, b3]);
  }
}"
`;

exports[`t-set > slots with a t-set with a component in body 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { LazyValue, createComponent, safeOutput, markRaw } = helpers;
  const comp1 = createComponent(app, \`C\`, true, false, false, []);
  const comp2 = createComponent(app, \`Child\`, true, true, false, []);
  
  function slot1(ctx, node, key = "") {
    ctx = Object.create(ctx);
    ctx["v"] = new LazyValue(value1, ctx, this, node, key + \`\\u00022\`);
    const b3 = text(\` in slot \`);
    const b4 = safeOutput(ctx['v'], node, key, "\\u00023");
    return multi([b3, b4]);
  }
  
  function value1(ctx, node, key = "") {
    return comp1({}, key + \`\\u00021\`, node, this, null);
  }
  
  return function template(ctx, node, key = "") {
    return comp2({slots: markRaw({"default": {__render: slot1, __ctx: ctx, __owner: this}})}, key + \`\\u00024\`, node, this, null);
  }
}"
`;

exports[`t-set > slots with a t-set with a component in body 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { callSlot } = helpers;
  
  return function template(ctx, node, key = "") {
    const b2 = text(\`Child \`);
    const b3 = callSlot(ctx, node, key + \`\\u00021\`, "default", false, null);
    return multi([b2, b3]);
  }
}"
`;

exports[`t-set > slots with a t-set with a component in body 3`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  
  return function template(ctx, node, key = "") {
    return text(\`C\`);
  }
}"
`;

exports[`t-set > slots with an t-set with a component in body 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { LazyValue, createComponent, safeOutput, markRaw } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, []);
  const comp2 = createComponent(app, \`Blorg\`, true, true, false, []);
  
  let block4 = createBlock(\`<div>coffee</div>\`);
  
  function slot1(ctx, node, key = "") {
    ctx = Object.create(ctx);
    ctx["v"] = new LazyValue(value1, ctx, this, node, key + \`\\u00022\`);
    const b5 = text(\` tea \`);
    const b6 = safeOutput(ctx['v'], node, key, "\\u00023");
    return multi([b5, b6]);
  }
  
  function value1(ctx, node, key = "") {
    const b3 = comp1({}, key + \`\\u00021\`, node, this, null);
    const b4 = block4();
    return multi([b3, b4]);
  }
  
  return function template(ctx, node, key = "") {
    return comp2({slots: markRaw({"default": {__render: slot1, __ctx: ctx, __owner: this}})}, key + \`\\u00024\`, node, this, null);
  }
}"
`;

exports[`t-set > slots with an t-set with a component in body 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { callSlot } = helpers;
  
  return function template(ctx, node, key = "") {
    const b2 = text(\`Blorg \`);
    const b3 = callSlot(ctx, node, key + \`\\u00021\`, "default", false, null);
    return multi([b2, b3]);
  }
}"
`;

exports[`t-set > slots with an t-set with a component in body 3`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  
  return function template(ctx, node, key = "") {
    return text(\`Child\`);
  }
}"
`;

exports[`t-set > slots with an unused t-set with a component in body 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { LazyValue, createComponent, markRaw } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, []);
  const comp2 = createComponent(app, \`Child\`, true, true, false, []);
  
  function slot1(ctx, node, key = "") {
    ctx = Object.create(ctx);
    ctx["v"] = new LazyValue(value1, ctx, this, node, key + \`\\u00022\`);
    return text(\` in slot \`);
  }
  
  function value1(ctx, node, key = "") {
    return comp1({}, key + \`\\u00021\`, node, this, null);
  }
  
  return function template(ctx, node, key = "") {
    return comp2({slots: markRaw({"default": {__render: slot1, __ctx: ctx, __owner: this}})}, key + \`\\u00023\`, node, this, null);
  }
}"
`;

exports[`t-set > slots with an unused t-set with a component in body 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { callSlot } = helpers;
  
  return function template(ctx, node, key = "") {
    const b2 = text(\`Child \`);
    const b3 = callSlot(ctx, node, key + \`\\u00021\`, "default", false, null);
    return multi([b2, b3]);
  }
}"
`;

exports[`t-set > t-set body with a component, output in nested loops 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { prepareList, LazyValue, createComponent, safeOutput, withKey, keyOf } = helpers;
  const comp1 = createComponent(app, \`Cell\`, true, false, false, []);
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  let block3 = createBlock(\`<p><block-child-0/></p>\`);
  
  function value1(ctx, node, key = "") {
    return comp1({}, key + \`\\u00021\`, node, this, null);
  }
  
  return function template(ctx, node, key = "") {
    const ctx1 = ctx;
    const [k_block2, v_block2, l_block2, c_block2] = prepareList([1,2]);
    for (let i1 = 0; i1 < l_block2; i1++) {
      let ctx = Object.create(ctx1);
      ctx["r"] = k_block2[i1];
      const key1 = ctx['r'];
      const skey1 = keyOf(key1);
      const ctx2 = ctx;
      const [k_block4, v_block4, l_block4, c_block4] = prepareList(['a']);
      for (let i2 = 0; i2 < l_block4; i2++) {
        let ctx = Object.create(ctx2);
        ctx["c"] = k_block4[i2];
        const key2 = ctx['c'];
        const skey2 = keyOf(key2);
        ctx["v"] = new LazyValue(value1, ctx, this, node, key + \`\\u00022\\u0002:\${skey1}\\u0002:\${skey2}\`);
        c_block4[i2] = withKey(safeOutput(ctx['v'], node, key, "\\u00023", 2, key1, key2), key2);
      }
      const b4 = list(c_block4);
      c_block2[i1] = withKey(block3([], [b4]), key1);
    }
    const b2 = list(c_block2);
    return block1([], [b2]);
  }
}"
`;

exports[`t-set > t-set body with a component, output in nested loops 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<b><block-child-0/></b>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].id, node, key, "\\u00021");
    return block1([], [b2]);
  }
}"
`;

exports[`t-set > t-set can't alter component even if key in component 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<div><p><block-child-0/></p><p><block-child-1/></p><p><block-child-2/></p></div>\`);
  
  return function template(ctx, node, key = "") {
    ctx = Object.create(ctx);
    const b2 = safeOutput(ctx['this'].iter, node, key, "\\u00021");
    ctx["iter"] = 5;
    const b3 = safeOutput(ctx['this'].iter, node, key, "\\u00022");
    const b4 = safeOutput(ctx['iter'], node, key, "\\u00023");
    return block1([], [b2, b3, b4]);
  }
}"
`;

exports[`t-set > t-set can't alter component if key not in component 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<div><p><block-child-0/></p><p><block-child-1/></p><p><block-child-2/></p></div>\`);
  
  return function template(ctx, node, key = "") {
    ctx = Object.create(ctx);
    const b2 = safeOutput(ctx['this'].iter, node, key, "\\u00021");
    ctx["iter"] = 5;
    const b3 = safeOutput(ctx['this'].iter, node, key, "\\u00022");
    const b4 = safeOutput(ctx['iter'], node, key, "\\u00023");
    return block1([], [b2, b3, b4]);
  }
}"
`;

exports[`t-set > t-set in t-if 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<div><p><block-child-0/></p></div>\`);
  
  return function template(ctx, node, key = "") {
    ctx = Object.create(ctx);
    let b2;
    ctx["flag"] = ctx['this'].state.flag;
    if (ctx['flag']==='if') {
      ctx["iter"] = 2;
    } else if (ctx['flag']==='elif') {
      ctx["iter"] = 3;
    } else {
      ctx["iter"] = 4;
    }
    b2 = safeOutput(ctx['iter'], node, key, "\\u00021");
    return block1([], [b2]);
  }
}"
`;

exports[`t-set > t-set not altered by child comp 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput, createComponent } = helpers;
  const comp1 = createComponent(app, \`Childcomp\`, true, false, false, []);
  
  let block1 = createBlock(\`<div><p><block-child-0/></p><block-child-1/><p><block-child-2/></p></div>\`);
  
  return function template(ctx, node, key = "") {
    ctx = Object.create(ctx);
    ctx["iter"] = 'source';
    const b2 = safeOutput(ctx['iter'], node, key, "\\u00021");
    const b3 = comp1({}, key + \`\\u00022\`, node, this, null);
    const b4 = safeOutput(ctx['iter'], node, key, "\\u00023");
    return block1([], [b2, b3, b4]);
  }
}"
`;

exports[`t-set > t-set not altered by child comp 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<div><block-child-0/><block-child-1/><block-child-2/></div>\`);
  
  return function template(ctx, node, key = "") {
    ctx = Object.create(ctx);
    const b2 = safeOutput(ctx['this'].iter, node, key, "\\u00021");
    ctx["iter"] = 'called';
    const b3 = safeOutput(ctx['this'].iter, node, key, "\\u00022");
    const b4 = safeOutput(ctx['iter'], node, key, "\\u00023");
    return block1([], [b2, b3, b4]);
  }
}"
`;

exports[`t-set > t-set outside modified in t-if 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<div><p><block-child-0/></p></div>\`);
  
  return function template(ctx, node, key = "") {
    ctx = Object.create(ctx);
    let b2;
    ctx["iter"] = 0;
    ctx["flag"] = ctx['this'].state.flag;
    if (ctx['flag']==='if') {
      ctx["iter"] = 2;
    } else if (ctx['flag']==='elif') {
      ctx["iter"] = 3;
    } else {
      ctx["iter"] = 4;
    }
    b2 = safeOutput(ctx['iter'], node, key, "\\u00021");
    return block1([], [b2]);
  }
}"
`;

exports[`t-set > t-set with a component in body 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { LazyValue, createComponent, safeOutput } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, []);
  
  let block1 = createBlock(\`<div><div><block-child-0/></div></div>\`);
  
  function value1(ctx, node, key = "") {
    return comp1({}, key + \`\\u00021\`, node, this, null);
  }
  
  return function template(ctx, node, key = "") {
    ctx = Object.create(ctx);
    ctx["v"] = new LazyValue(value1, ctx, this, node, key + \`\\u00022\`);
    const b3 = safeOutput(ctx['v'], node, key, "\\u00023");
    return block1([], [b3]);
  }
}"
`;

exports[`t-set > t-set with a component in body 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  
  return function template(ctx, node, key = "") {
    return text(\`Child\`);
  }
}"
`;

exports[`t-set > t-set with something in body 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { LazyValue, safeOutput } = helpers;
  
  let block1 = createBlock(\`<div><div><block-child-0/></div></div>\`);
  let block2 = createBlock(\`<p>coucou</p>\`);
  
  function value1(ctx, node, key = "") {
    return block2();
  }
  
  return function template(ctx, node, key = "") {
    ctx = Object.create(ctx);
    ctx["v"] = new LazyValue(value1, ctx, this, node, key + \`\\u00021\`);
    const b3 = safeOutput(ctx['v'], node, key, "\\u00022");
    return block1([], [b3]);
  }
}"
`;
